# ChangeLog for sys-kernel/dracut
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/dracut/ChangeLog,v 1.188 2015/03/28 14:08:04 aidecoe Exp $

*dracut-041-r2 (28 Mar 2015)

  28 Mar 2015; Amadeusz Żołnowski <aidecoe@gentoo.org> -dracut-041-r1.ebuild,
  +dracut-041-r2.ebuild,
  -files/041-r1-0001-Use-the-same-paths-in-dracut.sh-as-tho.patch,
  +files/041-r2-0001-Use-the-same-paths-in-dracut.sh-as-tho.patch,
  -files/041-r1-0002-Install-dracut-install-and-skipcpio-in.patch,
  +files/041-r2-0002-Install-dracut-install-and-skipcpio-in.patch,
  -files/041-r1-0003-Take-into-account-lib64-dirs-when-dete.patch,
  +files/041-r2-0003-Take-into-account-lib64-dirs-when-dete.patch,
  -files/041-r1-0004-Don-t-install-scripts-in-kernel-instal.patch:
  Don't remove kernel/install.d scripts if systemd is enabled. Fix bug #544558.

*dracut-041-r1 (24 Mar 2015)

  24 Mar 2015; Amadeusz Żołnowski <aidecoe@gentoo.org> +dracut-041-r1.ebuild,
  +files/041-r1-0001-Use-the-same-paths-in-dracut.sh-as-tho.patch,
  +files/041-r1-0002-Install-dracut-install-and-skipcpio-in.patch,
  +files/041-r1-0003-Take-into-account-lib64-dirs-when-dete.patch,
  +files/041-r1-0004-Don-t-install-scripts-in-kernel-instal.patch:
  Clean up patches for upcoming stabilization.

*dracut-041 (17 Feb 2015)

  17 Feb 2015; Amadeusz Żołnowski <aidecoe@gentoo.org> +dracut-041.ebuild,
  +files/041-0001-dracut-functions.sh-support-for-altern.patch,
  +files/041-0002-gentoo.conf-let-udevdir-be-handled-by-.patch,
  +files/041-0003-Use-the-same-paths-in-dracut.sh-as-tho.patch,
  +files/041-0004-Install-dracut-install-into-libexec-di.patch,
  +files/041-0005-Take-into-account-lib64-dirs-when-dete.patch:
  Version bump.

  NEWS
  ~~~~
  - fixed the shutdown loop
  - fixed gzip compression for versions, which do not have --rsyncable
  - fixed ifcfg generation for persistent interface names
  - multipath: