@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install postinst prepare setup
-DEPEND=virtual/udev systemd? ( >=sys-apps/systemd-199 ) app-text/asciidoc >=dev-libs/libxslt-1.1.26 app-text/docbook-xml-dtd:4.5 >=app-text/docbook-xsl-stylesheets-1.75.2 virtual/pkgconfig virtual/pkgconfig
-DESCRIPTION=Generic initramfs generation tool
-EAPI=4
-HOMEPAGE=http://dracut.wiki.kernel.org
-IUSE=debug selinux systemd
-KEYWORDS=~alpha ~amd64 ~arm ~ia64 ~ppc ~ppc64 ~sparc ~x86
-LICENSE=GPL-2
-RDEPEND=virtual/udev systemd? ( >=sys-apps/systemd-199 ) app-arch/cpio >=app-shells/bash-4.0 >sys-apps/kmod-5[tools] || ( >=sys-apps/sysvinit-2.87-r3 sys-apps/systemd[sysv-utils] sys-apps/systemd-sysv-utils ) >=sys-apps/util-linux-2.21 debug? ( dev-util/strace ) selinux? ( sys-libs/libselinux sys-libs/libsepol sec-policy/selinux-dracut )
-RESTRICT=test
-SLOT=0
-SRC_URI=mirror://kernel/linux/utils/boot/dracut/dracut-040.tar.xz
-_eclasses_=bash-completion-r1	c8399c7c7ecbcf7ed6e5bd3abb3d4af3	eutils	9fb270e417e0e83d64ca52586c4a79de	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=667924d7b1bc32bd920a4eb29a782b9a
