@@ -34,20 +34,19 @@ DIST dracut-034.tar.bz2 277692 SHA256 48c7fd57e287d4f34dfff5b5ead14a4511926858f1
 DIST dracut-040.tar.xz 263944 SHA256 b6e743353804b46e350177b9ecb9a8511df7e8c4ff9e0b4f3b4f72bc509c98a3 SHA512 6bc6a714572cc18c4cf9f9c1af4bc787287554ead1e39fbec8a1b8986585cf8c7c7ef476f87fc361f565eb344fe2594d63185ffe02cc5fa7cc3eaa03bcb4b72b WHIRLPOOL d8dbdbf6cb7705a0b7793f82a0323c49b4ac0dc3d61cf0073e3061f34af0b5c92dd21a7dc080f2a8d24d3eef3abc99df91f113675721267352f934f1319c66ba
 DIST dracut-041.tar.xz 268288 SHA256 8ece6c2240bf0e9283e5f717b65dfcd6830b3ef7f8d1c01b60014052f1063251 SHA512 358444588febfc482627eb5423b8a87b588ed3842ae814b9f88d8c5dfec28419f2aea92cd54c11c4949b9968d60d7e05ba9cfea78d26d2dc6f2a943a38b28dac WHIRLPOOL ab538fe1ffeb3d43185c6222a6e65af8c684b292be571e0571fdd69011f654c3093f3a2256f3003d5dbaf07d0a26f83d82055885bae1868738ad15dc74982e72
 EBUILD dracut-034-r4.ebuild 10446 SHA256 80ab338aeeadb2fbd62f2ecfd61b35ea79acabbda0f927af1e28523e166ba092 SHA512 c8a0190f302d986f808886e5e2846f094c62a3c6d8073559237b54d1f3e70334db3f0b6eace31e6b57825dab3a261a2e6c23fad542a54a04fd7938dade3f2c4b WHIRLPOOL 3ea152d45dad874279424f38c67eafb4c30f9d61fdc23a9256178aea6268ad4be68ebac193839e0c6f9f66ca47305f6d1eb637862bc710dbb2ee3403aac0dbb5
-EBUILD dracut-040-r2.ebuild 7925 SHA256 70525b9785a16f408f41e35c8e1bd544fb0a6002b72878fc87f8ab10a6bb9418 SHA512 b6b9aac944574fefd3609c36abf382478981136c855bdc46be5eb1ac08ca450e8404cf81dc2c214be41c2deacf8b5bdf54281e2538baee4485adfc603e3de907 WHIRLPOOL c238ab3f7197efc19fbc7a77308f19d91df104ce8b46805cdfb8244ec731e0fa3a179d4f9aeec1922b1612bc00315bafca7bf2d4a41a3894fb5b59da382cbe06
 EBUILD dracut-040-r3.ebuild 7998 SHA256 b9201824939326f805e9be6257b48ccf4d3d896364d4084a07f2d978c74d9255 SHA512 eaf85f05d3f63e50ab4e5d4ca7140dd96cb029ff789dbec5fca6ff557713be7bd187c445543cca53b7ba2bf15f12d808c5390f8dd8c1c199cbcbd6b065b7e887 WHIRLPOOL 854a55cb81b5b5f33573fe14fd32c0ef4fbe189bf4339bf9155824ffcd726f0aad74d3071dcb9a11fbe863ed7435b448870bd0b13b2f06e6c2575b387156836e
 EBUILD dracut-041-r2.ebuild 7941 SHA256 e5e3b4e96a1ec16cb383d5306f338c87171dfb17bb96562bd0d403138be3a098 SHA512 52b41129c9da17ac90873cb4940ededec22009e7beaf619b5bc1dd52c1cfd3cd5b019fcfbb8977f7c7437ee09bde89aa919c1754f31879551d62b97595fdd023 WHIRLPOOL 902afa17af4b4eed1f8f4473cc3a2be00604554b3b5613199b748618e682733163d50aad7011efde28b5a3a668fd57cf149a9d63ee0d5123bc471b3a37e6f494
 EBUILD dracut-041.ebuild 7944 SHA256 201a1c1dcfbdd970e7747227fe0e1db1fc511231ac94a7a1a6a06bf7ad02bb21 SHA512 2516d7c7f9a49a5aa7008d8d09783124d6c0ddd8448643550fdcca34ccb66ff479060fbefff764b219c91493cc6d968e3a7b94ce0ca399592f7eb28a1d43deca WHIRLPOOL f5d43b40f447a669bd798c21b90058ef5aa24d415c9e8440a28b133a6c9c45283dd80307fc327a554815f77425dba9db6d6e8c6cd63eeee411ca9bdba7ca5ea9
-MISC ChangeLog 81909 SHA256 5c34a509d2130c4b55a13475f2f6090937c067ffdc887da8b4796cc83e037ad6 SHA512 8a0ed1d54d564b5c8f84a18a9f00c7d3ad4cff514f775679febba94ee68bbd662001deb504df5b9070947b4de9ec10121182c03a67e8e01b85df56288a154188 WHIRLPOOL b2fda1e1e0fbbfcb753b9ee3e9fd21baa6ef65fa40fd4df52a03746f1031c1fdc6a28f2161cea15936aa7b03796cdb768c77ebc21ec6aa9206f0233e72261458
+MISC ChangeLog 82017 SHA256 85ad207d668b14d535cd9aab08a4674de5d01d9abad7d6c6e33f37cc4f6dcbd8 SHA512 462a416a3b5c44082a973eda8d74db125de441faed14c19a012c533135e968cfc9cb71d43383c9dec0356bc13a95c73aaea79fb1b3f5dff086c4a0c3fb6e8018 WHIRLPOOL 4a191ed0332b7a9d7af5b0aad056ec0d99c257669759fdbcf6293f09669fa1fcf0d2828d02e8196bf5b76def0d91c702b1dbc593c97c03f73e8b581b2f577347
 MISC metadata.xml 906 SHA256 5f19b725d0669877fdd7814634b7aa7dd73331459bace52de02908417b833c3f SHA512 c5838d36080528d541b67cb38de17cc2351f7e5e17ab060c58f037792225ea223ade6b7e69376f4a9256b0bb3dcf4de578dcd50ee1c7d04a3f3288ca3c1ada43 WHIRLPOOL 532ea421fab965094820d5c0961a00ca38c858461f572a0cd4a145aa90340a569ee942062338ae03773c2709a08e4882f3176333aa5383b7e3c467cb01c0874d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQEcBAEBCAAGBQJVFrXFAAoJEPATRTHh2/q14usH/2o2ZLNLykFrCut2xggRXszq
-9a4gpzKStdgXiOtv2fgmJFRis6oX6LRhXhuCOyNKv817y0FC2XdmZBhHSB/nSAI2
-wDuH7YueZZaIh5MYrxidkAXJDS3o29SldpHJQ2UwljQLtebM3IKMQtTCKyL3WcNu
-TAFK3NrolWf7wDvdgkDPFjfNXSXOJtiBouXLTR6FCyISoDdM7749VZ3gp42LvYAy
-trBiQRGJc0iJypR4hFpIF05p0eYemoPXfRAAX81Vzfw2OXd1qGRr4zIHzmCxMB0x
-B2NCw94Fg9t4Ej7ZFmWcrN7k/vnm9Ywurxl5JNB4oaqdqhdi0a8RgJJH1/B7ohk=
-=2TRl
+iQEcBAEBCAAGBQJVFsPIAAoJEPATRTHh2/q10KsH/Al0H6XlHwdcQXrxXxg8EXgf
+Rh42VB7fKrAD9RmI2B5QAkYuTtUpk+JJD6rPXe1cXYU+QdwBssbj6EH9PvnZZ1hS
+0tGrhVVFJrMMG3qS7l3zS6DnJHa+h2LgTVre5/AqpuswTmrynLOn3GCmNKcD23CK
+cSc+OmcFEG6Bi04AXCu+4Z6Iqo7jXTzEoWudKlMc9S0YspQrzY9CFuVo5f73KUj7
+c9661S7794diYIWj++UmcIXTDuePi5YT3tnioP7P2OA6ivkiZRa1urCTO+PlUf78
+7km2t+ddOy2TInHk5jndquZ7VRiVpnJliB4ib3RfmANR+eVERgIoRaE8hgG3/f4=
+=CDIZ
 -----END PGP SIGNATURE-----
